Refactored code for better readability

--- a/edt/requirements.txt
+++ b/edt/requirements.txt
@@ -188,3 +188,4 @@ Temporary commit content 2280
 Temporary commit content 2301
 Temporary commit content 2315
 Temporary commit content 2318
+Temporary commit content 2331
