Updated README with new features

--- a/edt/config.json
+++ b/edt/config.json
@@ -81,3 +81,4 @@ Temporary commit content 933
 Temporary commit content 942
 Temporary commit content 946
 Temporary commit content 958
+Temporary commit content 970
