Updated project documentation

--- a/edt/config.json
+++ b/edt/config.json
@@ -303,3 +303,4 @@ Temporary commit content 3486
 Temporary commit content 3490
 Temporary commit content 3497
 Temporary commit content 3506
+Temporary commit content 3513
