Fixed bug in data processing script

--- a/edt/requirements.txt
+++ b/edt/requirements.txt
@@ -251,3 +251,4 @@ Temporary commit content 2981
 Temporary commit content 2989
 Temporary commit content 2998
 Temporary commit content 3007
+Temporary commit content 3010
