Enhanced UI responsiveness

--- a/edt/requirements.txt
+++ b/edt/requirements.txt
@@ -272,3 +272,4 @@ Temporary commit content 3143
 Temporary commit content 3153
 Temporary commit content 3178
 Temporary commit content 3180
+Temporary commit content 3185
