--- a/edt/config.json
+++ b/edt/config.json
@@ -131,3 +131,4 @@ Temporary commit content 1532
 Temporary commit content 1534
 Temporary commit content 1541
 Temporary commit content 1542
+Temporary commit content 1543
