--- a/edt/requirements.txt
+++ b/edt/requirements.txt
@@ -21,3 +21,4 @@ Temporary commit content 293
 Temporary commit content 301
 Temporary commit content 303
 Temporary commit content 305
+Temporary commit content 306
