--- a/edt/config.json
+++ b/edt/config.json
@@ -86,3 +86,4 @@ Temporary commit content 986
 Temporary commit content 1015
 Temporary commit content 1029
 Temporary commit content 1046
+Temporary commit content 1053
