Improved error handling logic

--- a/edt/requirements.txt
+++ b/edt/requirements.txt
@@ -321,3 +321,4 @@ Temporary commit content 3679
 Temporary commit content 3683
 Temporary commit content 3688
 Temporary commit content 3719
+Temporary commit content 3729
