--- a/edt/config.json
+++ b/edt/config.json
@@ -133,3 +133,4 @@ Temporary commit content 1541
 Temporary commit content 1542
 Temporary commit content 1543
 Temporary commit content 1549
+Temporary commit content 1559
