Updated project documentation

--- a/edt/requirements.txt
+++ b/edt/requirements.txt
@@ -328,3 +328,4 @@ Temporary commit content 3760
 Temporary commit content 3782
 Temporary commit content 3793
 Temporary commit content 3796
+Temporary commit content 3797
