Added initial project plan

--- a/edt/requirements.txt
+++ b/edt/requirements.txt
@@ -58,3 +58,4 @@ Temporary commit content 715
 Temporary commit content 724
 Temporary commit content 743
 Temporary commit content 753
+Temporary commit content 774
