Updated README with new features

--- a/edt/config.json
+++ b/edt/config.json
@@ -70,3 +70,4 @@ Temporary commit content 796
 Temporary commit content 824
 Temporary commit content 831
 Temporary commit content 843
+Temporary commit content 850
