Refactored code for better readability

--- a/edt/config.json
+++ b/edt/config.json
@@ -159,3 +159,4 @@ Temporary commit content 1764
 Temporary commit content 1783
 Temporary commit content 1796
 Temporary commit content 1797
+Temporary commit content 1803
