--- a/edt/requirements.txt
+++ b/edt/requirements.txt
@@ -63,3 +63,4 @@ Temporary commit content 793
 Temporary commit content 800
 Temporary commit content 811
 Temporary commit content 821
+Temporary commit content 836
