Improved error handling logic

--- a/edt/requirements.txt
+++ b/edt/requirements.txt
@@ -39,3 +39,4 @@ Temporary commit content 485
 Temporary commit content 509
 Temporary commit content 517
 Temporary commit content 555
+Temporary commit content 568
