Refactored code for better readability

--- a/edt/requirements.txt
+++ b/edt/requirements.txt
@@ -266,3 +266,4 @@ Temporary commit content 3105
 Temporary commit content 3110
 Temporary commit content 3112
 Temporary commit content 3121
+Temporary commit content 3124
