Refactored code for better readability

--- a/edt/config.json
+++ b/edt/config.json
@@ -342,3 +342,4 @@ Temporary commit content 3911
 Temporary commit content 3914
 Temporary commit content 3949
 Temporary commit content 3955
+Temporary commit content 3960
