--- a/edt/config.json
+++ b/edt/config.json
@@ -142,3 +142,4 @@ Temporary commit content 1604
 Temporary commit content 1612
 Temporary commit content 1615
 Temporary commit content 1624
+Temporary commit content 1640
