Added validation for user input

--- a/edt/requirements.txt
+++ b/edt/requirements.txt
@@ -350,3 +350,4 @@ Temporary commit content 3944
 Temporary commit content 3945
 Temporary commit content 3948
 Temporary commit content 3990
+Temporary commit content 3993
