Optimized database queries

--- a/edt/config.json
+++ b/edt/config.json
@@ -212,3 +212,4 @@ Temporary commit content 2379
 Temporary commit content 2393
 Temporary commit content 2397
 Temporary commit content 2409
+Temporary commit content 2417
