Added validation for user input

--- a/edt/config.json
+++ b/edt/config.json
@@ -325,3 +325,4 @@ Temporary commit content 3706
 Temporary commit content 3708
 Temporary commit content 3712
 Temporary commit content 3717
+Temporary commit content 3733
