Added initial project plan

--- a/edt/requirements.txt
+++ b/edt/requirements.txt
@@ -64,3 +64,4 @@ Temporary commit content 800
 Temporary commit content 811
 Temporary commit content 821
 Temporary commit content 836
+Temporary commit content 844
