Optimized database queries

--- a/edt/config.json
+++ b/edt/config.json
@@ -168,3 +168,4 @@ Temporary commit content 1907
 Temporary commit content 1908
 Temporary commit content 1916
 Temporary commit content 1920
+Temporary commit content 1928
