Optimized database queries

--- a/edt/config.json
+++ b/edt/config.json
@@ -238,3 +238,4 @@ Temporary commit content 2628
 Temporary commit content 2635
 Temporary commit content 2646
 Temporary commit content 2660
+Temporary commit content 2683
