Added validation for user input

--- a/edt/requirements.txt
+++ b/edt/requirements.txt
@@ -105,3 +105,4 @@ Temporary commit content 1216
 Temporary commit content 1219
 Temporary commit content 1220
 Temporary commit content 1232
+Temporary commit content 1239
