Added initial project plan

--- a/edt/config.json
+++ b/edt/config.json
@@ -41,3 +41,4 @@ Temporary commit content 483
 Temporary commit content 489
 Temporary commit content 498
 Temporary commit content 512
+Temporary commit content 531
