Fixed typos in documentation

--- a/edt/config.json
+++ b/edt/config.json
@@ -329,3 +329,4 @@ Temporary commit content 3733
 Temporary commit content 3740
 Temporary commit content 3745
 Temporary commit content 3749
+Temporary commit content 3750
