Updated README with new features

--- a/edt/config.json
+++ b/edt/config.json
@@ -319,3 +319,4 @@ Temporary commit content 3636
 Temporary commit content 3647
 Temporary commit content 3661
 Temporary commit content 3662
+Temporary commit content 3682
