--- a/edt/config.json
+++ b/edt/config.json
@@ -171,3 +171,4 @@ Temporary commit content 1920
 Temporary commit content 1928
 Temporary commit content 1956
 Temporary commit content 1966
+Temporary commit content 1974
