--- a/edt/requirements.txt
+++ b/edt/requirements.txt
@@ -171,3 +171,4 @@ Temporary commit content 2097
 Temporary commit content 2104
 Temporary commit content 2120
 Temporary commit content 2137
+Temporary commit content 2152
