Added initial project plan

--- a/edt/config.json
+++ b/edt/config.json
@@ -299,3 +299,4 @@ Temporary commit content 3459
 Temporary commit content 3460
 Temporary commit content 3464
 Temporary commit content 3482
+Temporary commit content 3486
