Added validation for user input

--- a/edt/config.json
+++ b/edt/config.json
@@ -419,3 +419,4 @@ Temporary commit content 4768
 Temporary commit content 4771
 Temporary commit content 4772
 Temporary commit content 4776
+Temporary commit content 4779
