Updated README with new features

--- a/edt/config.json
+++ b/edt/config.json
@@ -359,3 +359,4 @@ Temporary commit content 4101
 Temporary commit content 4110
 Temporary commit content 4116
 Temporary commit content 4127
+Temporary commit content 4133
