Enhanced UI responsiveness

--- a/edt/requirements.txt
+++ b/edt/requirements.txt
@@ -123,3 +123,4 @@ Temporary commit content 1470
 Temporary commit content 1482
 Temporary commit content 1531
 Temporary commit content 1551
+Temporary commit content 1570
