Optimized database queries

--- a/edt/config.json
+++ b/edt/config.json
@@ -340,3 +340,4 @@ Temporary commit content 3874
 Temporary commit content 3897
 Temporary commit content 3911
 Temporary commit content 3914
+Temporary commit content 3949
