Optimized database queries

--- a/edt/config.json
+++ b/edt/config.json
@@ -346,3 +346,4 @@ Temporary commit content 3960
 Temporary commit content 3966
 Temporary commit content 3973
 Temporary commit content 3987
+Temporary commit content 3997
