--- a/edt/config.json
+++ b/edt/config.json
@@ -114,3 +114,4 @@ Temporary commit content 1287
 Temporary commit content 1293
 Temporary commit content 1298
 Temporary commit content 1302
+Temporary commit content 1308
