Fixed typos in documentation

--- a/edt/config.json
+++ b/edt/config.json
@@ -26,3 +26,4 @@ Temporary commit content 341
 Temporary commit content 345
 Temporary commit content 349
 Temporary commit content 358
+Temporary commit content 364
