Enhanced UI responsiveness

--- a/edt/requirements.txt
+++ b/edt/requirements.txt
@@ -248,3 +248,4 @@ Temporary commit content 2966
 Temporary commit content 2968
 Temporary commit content 2979
 Temporary commit content 2981
+Temporary commit content 2989
