Added validation for user input

--- a/edt/config.json
+++ b/edt/config.json
@@ -109,3 +109,4 @@ Temporary commit content 1246
 Temporary commit content 1247
 Temporary commit content 1251
 Temporary commit content 1257
+Temporary commit content 1266
