Updated README with new features

--- a/edt/config.json
+++ b/edt/config.json
@@ -274,3 +274,4 @@ Temporary commit content 3067
 Temporary commit content 3072
 Temporary commit content 3087
 Temporary commit content 3108
+Temporary commit content 3194
