Refactored code for better readability

--- a/edt/config.json
+++ b/edt/config.json
@@ -216,3 +216,4 @@ Temporary commit content 2417
 Temporary commit content 2431
 Temporary commit content 2438
 Temporary commit content 2442
+Temporary commit content 2452
