Updated README with new features

--- a/edt/requirements.txt
+++ b/edt/requirements.txt
@@ -344,3 +344,4 @@ Temporary commit content 3890
 Temporary commit content 3895
 Temporary commit content 3908
 Temporary commit content 3910
+Temporary commit content 3915
