--- a/edt/config.json
+++ b/edt/config.json
@@ -205,3 +205,4 @@ Temporary commit content 2267
 Temporary commit content 2275
 Temporary commit content 2282
 Temporary commit content 2289
+Temporary commit content 2308
