Fixed typos in documentation

--- a/edt/config.json
+++ b/edt/config.json
@@ -166,3 +166,4 @@ Temporary commit content 1863
 Temporary commit content 1864
 Temporary commit content 1907
 Temporary commit content 1908
+Temporary commit content 1916
