Optimized database queries

--- a/edt/config.json
+++ b/edt/config.json
@@ -223,3 +223,4 @@ Temporary commit content 2512
 Temporary commit content 2525
 Temporary commit content 2547
 Temporary commit content 2557
+Temporary commit content 2572
