--- a/edt/requirements.txt
+++ b/edt/requirements.txt
@@ -4,3 +4,4 @@ Temporary commit content 45
 Temporary commit content 70
 Temporary commit content 82
 Temporary commit content 90
+Temporary commit content 94
