--- a/edt/config.json
+++ b/edt/config.json
@@ -420,3 +420,4 @@ Temporary commit content 4771
 Temporary commit content 4772
 Temporary commit content 4776
 Temporary commit content 4779
+Temporary commit content 4780
