Improved error handling logic

--- a/edt/config.json
+++ b/edt/config.json
@@ -397,3 +397,4 @@ Temporary commit content 4578
 Temporary commit content 4579
 Temporary commit content 4580
 Temporary commit content 4596
+Temporary commit content 4604
