Improved error handling logic

--- a/edt/requirements.txt
+++ b/edt/requirements.txt
@@ -89,3 +89,4 @@ Temporary commit content 1071
 Temporary commit content 1093
 Temporary commit content 1096
 Temporary commit content 1124
+Temporary commit content 1126
