Refactored code for better readability

--- a/edt/requirements.txt
+++ b/edt/requirements.txt
@@ -255,3 +255,4 @@ Temporary commit content 3010
 Temporary commit content 3016
 Temporary commit content 3022
 Temporary commit content 3031
+Temporary commit content 3050
