Improved error handling logic

--- a/edt/requirements.txt
+++ b/edt/requirements.txt
@@ -396,3 +396,4 @@ Temporary commit content 4491
 Temporary commit content 4536
 Temporary commit content 4537
 Temporary commit content 4556
+Temporary commit content 4559
