Added initial project plan

--- a/edt/requirements.txt
+++ b/edt/requirements.txt
@@ -132,3 +132,4 @@ Temporary commit content 1628
 Temporary commit content 1646
 Temporary commit content 1649
 Temporary commit content 1652
+Temporary commit content 1671
