--- a/edt/config.json
+++ b/edt/config.json
@@ -113,3 +113,4 @@ Temporary commit content 1266
 Temporary commit content 1287
 Temporary commit content 1293
 Temporary commit content 1298
+Temporary commit content 1302
