Enhanced UI responsiveness

--- a/edt/config.json
+++ b/edt/config.json
@@ -406,3 +406,4 @@ Temporary commit content 4659
 Temporary commit content 4661
 Temporary commit content 4665
 Temporary commit content 4676
+Temporary commit content 4677
