Enhanced UI responsiveness

--- a/edt/requirements.txt
+++ b/edt/requirements.txt
@@ -356,3 +356,4 @@ Temporary commit content 4025
 Temporary commit content 4046
 Temporary commit content 4054
 Temporary commit content 4062
+Temporary commit content 4078
