Fixed bug in data processing script

--- a/edt/requirements.txt
+++ b/edt/requirements.txt
@@ -179,3 +179,4 @@ Temporary commit content 2214
 Temporary commit content 2233
 Temporary commit content 2237
 Temporary commit content 2256
+Temporary commit content 2258
