Fixed bug in data processing script

--- a/edt/requirements.txt
+++ b/edt/requirements.txt
@@ -146,3 +146,4 @@ Temporary commit content 1759
 Temporary commit content 1791
 Temporary commit content 1804
 Temporary commit content 1807
+Temporary commit content 1822
