Updated README with new features

--- a/edt/requirements.txt
+++ b/edt/requirements.txt
@@ -173,3 +173,4 @@ Temporary commit content 2120
 Temporary commit content 2137
 Temporary commit content 2152
 Temporary commit content 2158
+Temporary commit content 2179
