--- a/edt/config.json
+++ b/edt/config.json
@@ -42,3 +42,4 @@ Temporary commit content 489
 Temporary commit content 498
 Temporary commit content 512
 Temporary commit content 531
+Temporary commit content 532
