Improved error handling logic

--- a/edt/config.json
+++ b/edt/config.json
@@ -370,3 +370,4 @@ Temporary commit content 4262
 Temporary commit content 4273
 Temporary commit content 4275
 Temporary commit content 4276
+Temporary commit content 4281
