Added validation for user input

--- a/edt/config.json
+++ b/edt/config.json
@@ -110,3 +110,4 @@ Temporary commit content 1247
 Temporary commit content 1251
 Temporary commit content 1257
 Temporary commit content 1266
+Temporary commit content 1287
