Fixed typos in documentation

--- a/edt/requirements.txt
+++ b/edt/requirements.txt
@@ -237,3 +237,4 @@ Temporary commit content 2821
 Temporary commit content 2850
 Temporary commit content 2882
 Temporary commit content 2885
+Temporary commit content 2890
