Refactored code for better readability

--- a/edt/config.json
+++ b/edt/config.json
@@ -155,3 +155,4 @@ Temporary commit content 1703
 Temporary commit content 1727
 Temporary commit content 1729
 Temporary commit content 1738
+Temporary commit content 1764
