Optimized database queries

--- a/edt/config.json
+++ b/edt/config.json
@@ -302,3 +302,4 @@ Temporary commit content 3482
 Temporary commit content 3486
 Temporary commit content 3490
 Temporary commit content 3497
+Temporary commit content 3506
