Added validation for user input

--- a/edt/requirements.txt
+++ b/edt/requirements.txt
@@ -242,3 +242,4 @@ Temporary commit content 2893
 Temporary commit content 2895
 Temporary commit content 2915
 Temporary commit content 2944
+Temporary commit content 2949
