Fixed typos in documentation

--- a/edt/config.json
+++ b/edt/config.json
@@ -226,3 +226,4 @@ Temporary commit content 2557
 Temporary commit content 2572
 Temporary commit content 2573
 Temporary commit content 2590
+Temporary commit content 2593
