Improved error handling logic

--- a/edt/requirements.txt
+++ b/edt/requirements.txt
@@ -221,3 +221,4 @@ Temporary commit content 2618
 Temporary commit content 2653
 Temporary commit content 2666
 Temporary commit content 2680
+Temporary commit content 2682
