--- a/edt/requirements.txt
+++ b/edt/requirements.txt
@@ -235,3 +235,4 @@ Temporary commit content 2814
 Temporary commit content 2817
 Temporary commit content 2821
 Temporary commit content 2850
+Temporary commit content 2882
