Enhanced UI responsiveness

--- a/edt/requirements.txt
+++ b/edt/requirements.txt
@@ -414,3 +414,4 @@ Temporary commit content 4713
 Temporary commit content 4791
 Temporary commit content 4808
 Temporary commit content 4812
+Temporary commit content 4822
