Added initial project plan

--- a/edt/config.json
+++ b/edt/config.json
@@ -72,3 +72,4 @@ Temporary commit content 831
 Temporary commit content 843
 Temporary commit content 850
 Temporary commit content 877
+Temporary commit content 879
