--- a/edt/config.json
+++ b/edt/config.json
@@ -217,3 +217,4 @@ Temporary commit content 2431
 Temporary commit content 2438
 Temporary commit content 2442
 Temporary commit content 2452
+Temporary commit content 2478
