Added validation for user input

--- a/edt/config.json
+++ b/edt/config.json
@@ -225,3 +225,4 @@ Temporary commit content 2547
 Temporary commit content 2557
 Temporary commit content 2572
 Temporary commit content 2573
+Temporary commit content 2590
