Improved error handling logic

--- a/edt/requirements.txt
+++ b/edt/requirements.txt
@@ -52,3 +52,4 @@ Temporary commit content 657
 Temporary commit content 669
 Temporary commit content 691
 Temporary commit content 700
+Temporary commit content 709
