Added initial project plan

--- a/edt/config.json
+++ b/edt/config.json
@@ -188,3 +188,4 @@ Temporary commit content 2076
 Temporary commit content 2110
 Temporary commit content 2116
 Temporary commit content 2127
+Temporary commit content 2130
