Refactored code for better readability

--- a/edt/requirements.txt
+++ b/edt/requirements.txt
@@ -362,3 +362,4 @@ Temporary commit content 4093
 Temporary commit content 4126
 Temporary commit content 4128
 Temporary commit content 4158
+Temporary commit content 4170
