--- a/edt/config.json
+++ b/edt/config.json
@@ -21,3 +21,4 @@ Temporary commit content 259
 Temporary commit content 261
 Temporary commit content 271
 Temporary commit content 276
+Temporary commit content 295
