Enhanced UI responsiveness

--- a/edt/requirements.txt
+++ b/edt/requirements.txt
@@ -355,3 +355,4 @@ Temporary commit content 4016
 Temporary commit content 4025
 Temporary commit content 4046
 Temporary commit content 4054
+Temporary commit content 4062
