Fixed typos in documentation

--- a/edt/requirements.txt
+++ b/edt/requirements.txt
@@ -158,3 +158,4 @@ Temporary commit content 1947
 Temporary commit content 1987
 Temporary commit content 1988
 Temporary commit content 1997
+Temporary commit content 2010
