--- a/edt/config.json
+++ b/edt/config.json
@@ -224,3 +224,4 @@ Temporary commit content 2525
 Temporary commit content 2547
 Temporary commit content 2557
 Temporary commit content 2572
+Temporary commit content 2573
