Added initial project plan

--- a/edt/requirements.txt
+++ b/edt/requirements.txt
@@ -121,3 +121,4 @@ Temporary commit content 1426
 Temporary commit content 1469
 Temporary commit content 1470
 Temporary commit content 1482
+Temporary commit content 1531
