Refactored code for better readability

--- a/edt/config.json
+++ b/edt/config.json
@@ -365,3 +365,4 @@ Temporary commit content 4138
 Temporary commit content 4146
 Temporary commit content 4244
 Temporary commit content 4247
+Temporary commit content 4256
