Enhanced UI responsiveness

--- a/edt/config.json
+++ b/edt/config.json
@@ -361,3 +361,4 @@ Temporary commit content 4116
 Temporary commit content 4127
 Temporary commit content 4133
 Temporary commit content 4137
+Temporary commit content 4138
