--- a/edt/config.json
+++ b/edt/config.json
@@ -106,3 +106,4 @@ Temporary commit content 1215
 Temporary commit content 1221
 Temporary commit content 1237
 Temporary commit content 1246
+Temporary commit content 1247
