--- a/edt/requirements.txt
+++ b/edt/requirements.txt
@@ -41,3 +41,4 @@ Temporary commit content 517
 Temporary commit content 555
 Temporary commit content 568
 Temporary commit content 583
+Temporary commit content 588
