Updated project documentation

--- a/edt/requirements.txt
+++ b/edt/requirements.txt
@@ -100,3 +100,4 @@ Temporary commit content 1187
 Temporary commit content 1189
 Temporary commit content 1203
 Temporary commit content 1212
+Temporary commit content 1213
