Fixed typos in documentation

--- a/edt/requirements.txt
+++ b/edt/requirements.txt
@@ -109,3 +109,4 @@ Temporary commit content 1239
 Temporary commit content 1252
 Temporary commit content 1281
 Temporary commit content 1282
+Temporary commit content 1292
