Fixed typos in documentation

--- a/edt/config.json
+++ b/edt/config.json
@@ -83,3 +83,4 @@ Temporary commit content 946
 Temporary commit content 958
 Temporary commit content 970
 Temporary commit content 986
+Temporary commit content 1015
