Enhanced UI responsiveness

--- a/edt/config.json
+++ b/edt/config.json
@@ -115,3 +115,4 @@ Temporary commit content 1293
 Temporary commit content 1298
 Temporary commit content 1302
 Temporary commit content 1308
+Temporary commit content 1322
