Improved error handling logic

--- a/edt/config.json
+++ b/edt/config.json
@@ -313,3 +313,4 @@ Temporary commit content 3568
 Temporary commit content 3575
 Temporary commit content 3586
 Temporary commit content 3589
+Temporary commit content 3597
