--- a/edt/requirements.txt
+++ b/edt/requirements.txt
@@ -5,3 +5,4 @@ Temporary commit content 70
 Temporary commit content 82
 Temporary commit content 90
 Temporary commit content 94
+Temporary commit content 108
