--- a/edt/config.json
+++ b/edt/config.json
@@ -47,3 +47,4 @@ Temporary commit content 542
 Temporary commit content 548
 Temporary commit content 575
 Temporary commit content 579
+Temporary commit content 587
