Refactored code for better readability

--- a/edt/config.json
+++ b/edt/config.json
@@ -292,3 +292,4 @@ Temporary commit content 3406
 Temporary commit content 3417
 Temporary commit content 3427
 Temporary commit content 3439
+Temporary commit content 3447
