Fixed typos in documentation

--- a/edt/config.json
+++ b/edt/config.json
@@ -424,3 +424,4 @@ Temporary commit content 4780
 Temporary commit content 4816
 Temporary commit content 4827
 Temporary commit content 4838
+Temporary commit content 4854
