Optimized database queries

--- a/edt/config.json
+++ b/edt/config.json
@@ -118,3 +118,4 @@ Temporary commit content 1308
 Temporary commit content 1322
 Temporary commit content 1334
 Temporary commit content 1358
+Temporary commit content 1419
