Added validation for user input

--- a/edt/config.json
+++ b/edt/config.json
@@ -326,3 +326,4 @@ Temporary commit content 3708
 Temporary commit content 3712
 Temporary commit content 3717
 Temporary commit content 3733
+Temporary commit content 3740
