Enhanced UI responsiveness

--- a/edt/requirements.txt
+++ b/edt/requirements.txt
@@ -415,3 +415,4 @@ Temporary commit content 4791
 Temporary commit content 4808
 Temporary commit content 4812
 Temporary commit content 4822
+Temporary commit content 4823
