Added validation for user input

--- a/edt/requirements.txt
+++ b/edt/requirements.txt
@@ -148,3 +148,4 @@ Temporary commit content 1804
 Temporary commit content 1807
 Temporary commit content 1822
 Temporary commit content 1827
+Temporary commit content 1834
