Improved error handling logic

--- a/edt/requirements.txt
+++ b/edt/requirements.txt
@@ -361,3 +361,4 @@ Temporary commit content 4092
 Temporary commit content 4093
 Temporary commit content 4126
 Temporary commit content 4128
+Temporary commit content 4158
