Optimized database queries

--- a/edt/config.json
+++ b/edt/config.json
@@ -230,3 +230,4 @@ Temporary commit content 2593
 Temporary commit content 2594
 Temporary commit content 2615
 Temporary commit content 2616
+Temporary commit content 2621
