Added initial project plan

--- a/edt/config.json
+++ b/edt/config.json
@@ -347,3 +347,4 @@ Temporary commit content 3966
 Temporary commit content 3973
 Temporary commit content 3987
 Temporary commit content 3997
+Temporary commit content 4000
