Updated project documentation

--- a/edt/requirements.txt
+++ b/edt/requirements.txt
@@ -257,3 +257,4 @@ Temporary commit content 3022
 Temporary commit content 3031
 Temporary commit content 3050
 Temporary commit content 3064
+Temporary commit content 3074
