Fixed typos in documentation

--- a/edt/requirements.txt
+++ b/edt/requirements.txt
@@ -287,3 +287,4 @@ Temporary commit content 3281
 Temporary commit content 3283
 Temporary commit content 3290
 Temporary commit content 3299
+Temporary commit content 3315
