Fixed bug in data processing script

--- a/edt/config.json
+++ b/edt/config.json
@@ -291,3 +291,4 @@ Temporary commit content 3357
 Temporary commit content 3406
 Temporary commit content 3417
 Temporary commit content 3427
+Temporary commit content 3439
