Refactored code for better readability

--- a/edt/config.json
+++ b/edt/config.json
@@ -66,3 +66,4 @@ Temporary commit content 746
 Temporary commit content 762
 Temporary commit content 765
 Temporary commit content 779
+Temporary commit content 796
