Fixed bug in data processing script

--- a/edt/requirements.txt
+++ b/edt/requirements.txt
@@ -134,3 +134,4 @@ Temporary commit content 1649
 Temporary commit content 1652
 Temporary commit content 1671
 Temporary commit content 1691
+Temporary commit content 1700
