Refactored code for better readability

--- a/edt/config.json
+++ b/edt/config.json
@@ -112,3 +112,4 @@ Temporary commit content 1257
 Temporary commit content 1266
 Temporary commit content 1287
 Temporary commit content 1293
+Temporary commit content 1298
