Updated project documentation

--- a/edt/config.json
+++ b/edt/config.json
@@ -371,3 +371,4 @@ Temporary commit content 4273
 Temporary commit content 4275
 Temporary commit content 4276
 Temporary commit content 4281
+Temporary commit content 4292
