Improved error handling logic

--- a/edt/config.json
+++ b/edt/config.json
@@ -297,3 +297,4 @@ Temporary commit content 3448
 Temporary commit content 3450
 Temporary commit content 3459
 Temporary commit content 3460
+Temporary commit content 3464
