Updated project documentation

--- a/edt/requirements.txt
+++ b/edt/requirements.txt
@@ -70,3 +70,4 @@ Temporary commit content 856
 Temporary commit content 871
 Temporary commit content 880
 Temporary commit content 884
+Temporary commit content 887
