--- a/edt/config.json
+++ b/edt/config.json
@@ -3,3 +3,4 @@ Temporary commit content 19
 Temporary commit content 22
 Temporary commit content 29
 Temporary commit content 37
+Temporary commit content 43
