Updated README with new features

--- a/edt/requirements.txt
+++ b/edt/requirements.txt
@@ -336,3 +336,4 @@ Temporary commit content 3820
 Temporary commit content 3822
 Temporary commit content 3844
 Temporary commit content 3863
+Temporary commit content 3870
