--- a/edt/config.json
+++ b/edt/config.json
@@ -257,3 +257,4 @@ Temporary commit content 2879
 Temporary commit content 2892
 Temporary commit content 2896
 Temporary commit content 2897
+Temporary commit content 2945
