Updated README with new features

--- a/edt/config.json
+++ b/edt/config.json
@@ -404,3 +404,4 @@ Temporary commit content 4626
 Temporary commit content 4632
 Temporary commit content 4659
 Temporary commit content 4661
+Temporary commit content 4665
