--- a/edt/requirements.txt
+++ b/edt/requirements.txt
@@ -95,3 +95,4 @@ Temporary commit content 1144
 Temporary commit content 1155
 Temporary commit content 1164
 Temporary commit content 1165
+Temporary commit content 1172
