Added initial project plan

--- a/edt/requirements.txt
+++ b/edt/requirements.txt
@@ -97,3 +97,4 @@ Temporary commit content 1164
 Temporary commit content 1165
 Temporary commit content 1172
 Temporary commit content 1187
+Temporary commit content 1189
