Fixed bug in data processing script

--- a/edt/config.json
+++ b/edt/config.json
@@ -68,3 +68,4 @@ Temporary commit content 765
 Temporary commit content 779
 Temporary commit content 796
 Temporary commit content 824
+Temporary commit content 831
