--- a/edt/config.json
+++ b/edt/config.json
@@ -231,3 +231,4 @@ Temporary commit content 2594
 Temporary commit content 2615
 Temporary commit content 2616
 Temporary commit content 2621
+Temporary commit content 2623
