Fixed typos in documentation

--- a/edt/requirements.txt
+++ b/edt/requirements.txt
@@ -253,3 +253,4 @@ Temporary commit content 2998
 Temporary commit content 3007
 Temporary commit content 3010
 Temporary commit content 3016
+Temporary commit content 3022
