--- a/edt/config.json
+++ b/edt/config.json
@@ -204,3 +204,4 @@ Temporary commit content 2263
 Temporary commit content 2267
 Temporary commit content 2275
 Temporary commit content 2282
+Temporary commit content 2289
