Improved error handling logic

--- a/edt/requirements.txt
+++ b/edt/requirements.txt
@@ -125,3 +125,4 @@ Temporary commit content 1531
 Temporary commit content 1551
 Temporary commit content 1570
 Temporary commit content 1597
+Temporary commit content 1606
