Updated project documentation

--- a/edt/config.json
+++ b/edt/config.json
@@ -311,3 +311,4 @@ Temporary commit content 3553
 Temporary commit content 3558
 Temporary commit content 3568
 Temporary commit content 3575
+Temporary commit content 3586
