Refactored code for better readability

--- a/edt/config.json
+++ b/edt/config.json
@@ -96,3 +96,4 @@ Temporary commit content 1098
 Temporary commit content 1101
 Temporary commit content 1113
 Temporary commit content 1125
+Temporary commit content 1131
