Updated README with new features

--- a/edt/requirements.txt
+++ b/edt/requirements.txt
@@ -401,3 +401,4 @@ Temporary commit content 4565
 Temporary commit content 4572
 Temporary commit content 4577
 Temporary commit content 4587
+Temporary commit content 4621
