Optimized database queries

--- a/edt/requirements.txt
+++ b/edt/requirements.txt
@@ -176,3 +176,4 @@ Temporary commit content 2158
 Temporary commit content 2179
 Temporary commit content 2213
 Temporary commit content 2214
+Temporary commit content 2233
