Fixed typos in documentation

--- a/edt/requirements.txt
+++ b/edt/requirements.txt
@@ -33,3 +33,4 @@ Temporary commit content 432
 Temporary commit content 434
 Temporary commit content 435
 Temporary commit content 438
+Temporary commit content 456
