Updated project documentation

--- a/edt/requirements.txt
+++ b/edt/requirements.txt
@@ -187,3 +187,4 @@ Temporary commit content 2278
 Temporary commit content 2280
 Temporary commit content 2301
 Temporary commit content 2315
+Temporary commit content 2318
