Improved error handling logic

--- a/edt/requirements.txt
+++ b/edt/requirements.txt
@@ -217,3 +217,4 @@ Temporary commit content 2583
 Temporary commit content 2592
 Temporary commit content 2603
 Temporary commit content 2611
+Temporary commit content 2618
