Updated project documentation

--- a/edt/requirements.txt
+++ b/edt/requirements.txt
@@ -195,3 +195,4 @@ Temporary commit content 2368
 Temporary commit content 2388
 Temporary commit content 2400
 Temporary commit content 2407
+Temporary commit content 2410
