Fixed bug in data processing script

--- a/edt/config.json
+++ b/edt/config.json
@@ -372,3 +372,4 @@ Temporary commit content 4275
 Temporary commit content 4276
 Temporary commit content 4281
 Temporary commit content 4292
+Temporary commit content 4297
