Fixed typos in documentation

--- a/edt/config.json
+++ b/edt/config.json
@@ -358,3 +358,4 @@ Temporary commit content 4088
 Temporary commit content 4101
 Temporary commit content 4110
 Temporary commit content 4116
+Temporary commit content 4127
