--- a/edt/config.json
+++ b/edt/config.json
@@ -157,3 +157,4 @@ Temporary commit content 1729
 Temporary commit content 1738
 Temporary commit content 1764
 Temporary commit content 1783
+Temporary commit content 1796
