Updated README with new features

--- a/edt/config.json
+++ b/edt/config.json
@@ -279,3 +279,4 @@ Temporary commit content 3196
 Temporary commit content 3232
 Temporary commit content 3233
 Temporary commit content 3253
+Temporary commit content 3291
