Updated README with new features

--- a/edt/requirements.txt
+++ b/edt/requirements.txt
@@ -194,3 +194,4 @@ Temporary commit content 2364
 Temporary commit content 2368
 Temporary commit content 2388
 Temporary commit content 2400
+Temporary commit content 2407
