--- a/edt/requirements.txt
+++ b/edt/requirements.txt
@@ -153,3 +153,4 @@ Temporary commit content 1855
 Temporary commit content 1911
 Temporary commit content 1918
 Temporary commit content 1930
+Temporary commit content 1945
