--- a/edt/config.json
+++ b/edt/config.json
@@ -348,3 +348,4 @@ Temporary commit content 3973
 Temporary commit content 3987
 Temporary commit content 3997
 Temporary commit content 4000
+Temporary commit content 4007
