Updated README with new features

--- a/edt/requirements.txt
+++ b/edt/requirements.txt
@@ -122,3 +122,4 @@ Temporary commit content 1469
 Temporary commit content 1470
 Temporary commit content 1482
 Temporary commit content 1531
+Temporary commit content 1551
