Updated project documentation

--- a/edt/requirements.txt
+++ b/edt/requirements.txt
@@ -230,3 +230,4 @@ Temporary commit content 2746
 Temporary commit content 2753
 Temporary commit content 2760
 Temporary commit content 2796
+Temporary commit content 2810
