Improved error handling logic

--- a/edt/config.json
+++ b/edt/config.json
@@ -357,3 +357,4 @@ Temporary commit content 4079
 Temporary commit content 4088
 Temporary commit content 4101
 Temporary commit content 4110
+Temporary commit content 4116
