Optimized database queries

--- a/edt/config.json
+++ b/edt/config.json
@@ -220,3 +220,4 @@ Temporary commit content 2452
 Temporary commit content 2478
 Temporary commit content 2481
 Temporary commit content 2512
+Temporary commit content 2525
