Fixed typos in documentation

--- a/edt/requirements.txt
+++ b/edt/requirements.txt
@@ -135,3 +135,4 @@ Temporary commit content 1652
 Temporary commit content 1671
 Temporary commit content 1691
 Temporary commit content 1700
+Temporary commit content 1701
