Improved error handling logic

--- a/edt/requirements.txt
+++ b/edt/requirements.txt
@@ -74,3 +74,4 @@ Temporary commit content 887
 Temporary commit content 898
 Temporary commit content 902
 Temporary commit content 910
+Temporary commit content 914
