Enhanced UI responsiveness

--- a/edt/config.json
+++ b/edt/config.json
@@ -284,3 +284,4 @@ Temporary commit content 3305
 Temporary commit content 3319
 Temporary commit content 3344
 Temporary commit content 3349
+Temporary commit content 3354
