Added validation for user input

--- a/edt/config.json
+++ b/edt/config.json
@@ -240,3 +240,4 @@ Temporary commit content 2646
 Temporary commit content 2660
 Temporary commit content 2683
 Temporary commit content 2734
+Temporary commit content 2745
