Added initial project plan

--- a/edt/config.json
+++ b/edt/config.json
@@ -288,3 +288,4 @@ Temporary commit content 3354
 Temporary commit content 3355
 Temporary commit content 3356
 Temporary commit content 3357
+Temporary commit content 3406
