Fixed bug in data processing script

--- a/edt/requirements.txt
+++ b/edt/requirements.txt
@@ -129,3 +129,4 @@ Temporary commit content 1606
 Temporary commit content 1607
 Temporary commit content 1627
 Temporary commit content 1628
+Temporary commit content 1646
