Added initial project plan

--- a/edt/requirements.txt
+++ b/edt/requirements.txt
@@ -394,3 +394,4 @@ Temporary commit content 4445
 Temporary commit content 4455
 Temporary commit content 4491
 Temporary commit content 4536
+Temporary commit content 4537
