Updated project documentation

--- a/edt/config.json
+++ b/edt/config.json
@@ -31,3 +31,4 @@ Temporary commit content 370
 Temporary commit content 396
 Temporary commit content 397
 Temporary commit content 422
+Temporary commit content 425
