--- a/edt/config.json
+++ b/edt/config.json
@@ -38,3 +38,4 @@ Temporary commit content 437
 Temporary commit content 444
 Temporary commit content 450
 Temporary commit content 483
+Temporary commit content 489
