Fixed bug in data processing script

--- a/edt/config.json
+++ b/edt/config.json
@@ -111,3 +111,4 @@ Temporary commit content 1251
 Temporary commit content 1257
 Temporary commit content 1266
 Temporary commit content 1287
+Temporary commit content 1293
