Optimized database queries

--- a/edt/config.json
+++ b/edt/config.json
@@ -127,3 +127,4 @@ Temporary commit content 1472
 Temporary commit content 1505
 Temporary commit content 1510
 Temporary commit content 1518
+Temporary commit content 1532
