Added initial project plan

--- a/edt/requirements.txt
+++ b/edt/requirements.txt
@@ -364,3 +364,4 @@ Temporary commit content 4128
 Temporary commit content 4158
 Temporary commit content 4170
 Temporary commit content 4174
+Temporary commit content 4185
