--- a/edt/config.json
+++ b/edt/config.json
@@ -2,3 +2,4 @@ Temporary commit content 13
 Temporary commit content 19
 Temporary commit content 22
 Temporary commit content 29
+Temporary commit content 37
