Enhanced UI responsiveness

--- a/edt/config.json
+++ b/edt/config.json
@@ -108,3 +108,4 @@ Temporary commit content 1237
 Temporary commit content 1246
 Temporary commit content 1247
 Temporary commit content 1251
+Temporary commit content 1257
