Improved error handling logic

--- a/edt/requirements.txt
+++ b/edt/requirements.txt
@@ -28,3 +28,4 @@ Temporary commit content 353
 Temporary commit content 374
 Temporary commit content 387
 Temporary commit content 388
+Temporary commit content 393
