Fixed bug in data processing script

--- a/edt/requirements.txt
+++ b/edt/requirements.txt
@@ -219,3 +219,4 @@ Temporary commit content 2603
 Temporary commit content 2611
 Temporary commit content 2618
 Temporary commit content 2653
+Temporary commit content 2666
