Fixed bug in data processing script

--- a/edt/requirements.txt
+++ b/edt/requirements.txt
@@ -397,3 +397,4 @@ Temporary commit content 4536
 Temporary commit content 4537
 Temporary commit content 4556
 Temporary commit content 4559
+Temporary commit content 4565
