Added validation for user input

--- a/edt/config.json
+++ b/edt/config.json
@@ -154,3 +154,4 @@ Temporary commit content 1690
 Temporary commit content 1703
 Temporary commit content 1727
 Temporary commit content 1729
+Temporary commit content 1738
