Updated README with new features

--- a/edt/config.json
+++ b/edt/config.json
@@ -100,3 +100,4 @@ Temporary commit content 1131
 Temporary commit content 1142
 Temporary commit content 1188
 Temporary commit content 1205
+Temporary commit content 1206
