--- a/edt/config.json
+++ b/edt/config.json
@@ -124,3 +124,4 @@ Temporary commit content 1443
 Temporary commit content 1447
 Temporary commit content 1462
 Temporary commit content 1472
+Temporary commit content 1505
