--- a/edt/config.json
+++ b/edt/config.json
@@ -6,3 +6,4 @@ Temporary commit content 37
 Temporary commit content 43
 Temporary commit content 60
 Temporary commit content 63
+Temporary commit content 84
