Refactored code for better readability

--- a/edt/config.json
+++ b/edt/config.json
@@ -261,3 +261,4 @@ Temporary commit content 2945
 Temporary commit content 2975
 Temporary commit content 2984
 Temporary commit content 2999
+Temporary commit content 3009
