Updated project documentation

--- a/edt/requirements.txt
+++ b/edt/requirements.txt
@@ -82,3 +82,4 @@ Temporary commit content 945
 Temporary commit content 949
 Temporary commit content 961
 Temporary commit content 979
+Temporary commit content 1009
