Fixed typos in documentation

--- a/edt/config.json
+++ b/edt/config.json
@@ -338,3 +338,4 @@ Temporary commit content 3852
 Temporary commit content 3858
 Temporary commit content 3874
 Temporary commit content 3897
+Temporary commit content 3911
