Refactored code for better readability

--- a/edt/config.json
+++ b/edt/config.json
@@ -221,3 +221,4 @@ Temporary commit content 2478
 Temporary commit content 2481
 Temporary commit content 2512
 Temporary commit content 2525
+Temporary commit content 2547
