Updated README with new features

--- a/edt/config.json
+++ b/edt/config.json
@@ -187,3 +187,4 @@ Temporary commit content 2066
 Temporary commit content 2076
 Temporary commit content 2110
 Temporary commit content 2116
+Temporary commit content 2127
