Optimized database queries

--- a/edt/requirements.txt
+++ b/edt/requirements.txt
@@ -233,3 +233,4 @@ Temporary commit content 2796
 Temporary commit content 2810
 Temporary commit content 2814
 Temporary commit content 2817
+Temporary commit content 2821
