Refactored code for better readability

--- a/edt/config.json
+++ b/edt/config.json
@@ -89,3 +89,4 @@ Temporary commit content 1046
 Temporary commit content 1053
 Temporary commit content 1054
 Temporary commit content 1065
+Temporary commit content 1073
