Optimized database queries

--- a/edt/config.json
+++ b/edt/config.json
@@ -207,3 +207,4 @@ Temporary commit content 2282
 Temporary commit content 2289
 Temporary commit content 2308
 Temporary commit content 2360
+Temporary commit content 2373
