Updated project documentation

--- a/edt/config.json
+++ b/edt/config.json
@@ -285,3 +285,4 @@ Temporary commit content 3319
 Temporary commit content 3344
 Temporary commit content 3349
 Temporary commit content 3354
+Temporary commit content 3355
