Refactored code for better readability

--- a/edt/requirements.txt
+++ b/edt/requirements.txt
@@ -427,3 +427,4 @@ Temporary commit content 4888
 Temporary commit content 4901
 Temporary commit content 4906
 Temporary commit content 4935
+Temporary commit content 4937
