--- a/edt/requirements.txt
+++ b/edt/requirements.txt
@@ -317,3 +317,4 @@ Temporary commit content 3623
 Temporary commit content 3628
 Temporary commit content 3652
 Temporary commit content 3675
+Temporary commit content 3679
