Added validation for user input

--- a/edt/config.json
+++ b/edt/config.json
@@ -210,3 +210,4 @@ Temporary commit content 2360
 Temporary commit content 2373
 Temporary commit content 2379
 Temporary commit content 2393
+Temporary commit content 2397
