Refactored code for better readability

--- a/edt/config.json
+++ b/edt/config.json
@@ -161,3 +161,4 @@ Temporary commit content 1796
 Temporary commit content 1797
 Temporary commit content 1803
 Temporary commit content 1805
+Temporary commit content 1825
