Improved error handling logic

--- a/edt/requirements.txt
+++ b/edt/requirements.txt
@@ -408,3 +408,4 @@ Temporary commit content 4634
 Temporary commit content 4644
 Temporary commit content 4667
 Temporary commit content 4680
+Temporary commit content 4691
