Fixed typos in documentation

--- a/edt/requirements.txt
+++ b/edt/requirements.txt
@@ -177,3 +177,4 @@ Temporary commit content 2179
 Temporary commit content 2213
 Temporary commit content 2214
 Temporary commit content 2233
+Temporary commit content 2237
