--- a/edt/config.json
+++ b/edt/config.json
@@ -37,3 +37,4 @@ Temporary commit content 429
 Temporary commit content 437
 Temporary commit content 444
 Temporary commit content 450
+Temporary commit content 483
