Refactored code for better readability

--- a/edt/requirements.txt
+++ b/edt/requirements.txt
@@ -36,3 +36,4 @@ Temporary commit content 438
 Temporary commit content 456
 Temporary commit content 468
 Temporary commit content 485
+Temporary commit content 509
