--- a/edt/config.json
+++ b/edt/config.json
@@ -426,3 +426,4 @@ Temporary commit content 4827
 Temporary commit content 4838
 Temporary commit content 4854
 Temporary commit content 4902
+Temporary commit content 4908
