Refactored code for better readability

--- a/edt/requirements.txt
+++ b/edt/requirements.txt
@@ -303,3 +303,4 @@ Temporary commit content 3422
 Temporary commit content 3426
 Temporary commit content 3451
 Temporary commit content 3457
+Temporary commit content 3465
