--- a/edt/requirements.txt
+++ b/edt/requirements.txt
@@ -202,3 +202,4 @@ Temporary commit content 2436
 Temporary commit content 2437
 Temporary commit content 2461
 Temporary commit content 2466
+Temporary commit content 2479
