Fixed typos in documentation

--- a/edt/config.json
+++ b/edt/config.json
@@ -395,3 +395,4 @@ Temporary commit content 4538
 Temporary commit content 4545
 Temporary commit content 4578
 Temporary commit content 4579
+Temporary commit content 4580
