Updated README with new features

--- a/edt/config.json
+++ b/edt/config.json
@@ -252,3 +252,4 @@ Temporary commit content 2818
 Temporary commit content 2826
 Temporary commit content 2830
 Temporary commit content 2833
+Temporary commit content 2853
