Added validation for user input

--- a/edt/config.json
+++ b/edt/config.json
@@ -394,3 +394,4 @@ Temporary commit content 4515
 Temporary commit content 4538
 Temporary commit content 4545
 Temporary commit content 4578
+Temporary commit content 4579
