Enhanced UI responsiveness

--- a/edt/config.json
+++ b/edt/config.json
@@ -322,3 +322,4 @@ Temporary commit content 3662
 Temporary commit content 3682
 Temporary commit content 3686
 Temporary commit content 3706
+Temporary commit content 3708
