Updated README with new features

--- a/edt/requirements.txt
+++ b/edt/requirements.txt
@@ -265,3 +265,4 @@ Temporary commit content 3103
 Temporary commit content 3105
 Temporary commit content 3110
 Temporary commit content 3112
+Temporary commit content 3121
