Updated README with new features

--- a/edt/requirements.txt
+++ b/edt/requirements.txt
@@ -299,3 +299,4 @@ Temporary commit content 3385
 Temporary commit content 3389
 Temporary commit content 3395
 Temporary commit content 3400
+Temporary commit content 3422
