--- a/edt/config.json
+++ b/edt/config.json
@@ -87,3 +87,4 @@ Temporary commit content 1015
 Temporary commit content 1029
 Temporary commit content 1046
 Temporary commit content 1053
+Temporary commit content 1054
