Updated project documentation

--- a/edt/requirements.txt
+++ b/edt/requirements.txt
@@ -214,3 +214,4 @@ Temporary commit content 2550
 Temporary commit content 2565
 Temporary commit content 2567
 Temporary commit content 2583
+Temporary commit content 2592
