Improved error handling logic

--- a/edt/requirements.txt
+++ b/edt/requirements.txt
@@ -297,3 +297,4 @@ Temporary commit content 3360
 Temporary commit content 3366
 Temporary commit content 3385
 Temporary commit content 3389
+Temporary commit content 3395
