--- a/edt/requirements.txt
+++ b/edt/requirements.txt
@@ -192,3 +192,4 @@ Temporary commit content 2331
 Temporary commit content 2345
 Temporary commit content 2364
 Temporary commit content 2368
+Temporary commit content 2388
