Updated README with new features

--- a/edt/config.json
+++ b/edt/config.json
@@ -421,3 +421,4 @@ Temporary commit content 4772
 Temporary commit content 4776
 Temporary commit content 4779
 Temporary commit content 4780
+Temporary commit content 4816
