Added validation for user input

--- a/edt/requirements.txt
+++ b/edt/requirements.txt
@@ -178,3 +178,4 @@ Temporary commit content 2213
 Temporary commit content 2214
 Temporary commit content 2233
 Temporary commit content 2237
+Temporary commit content 2256
